<resources>
    <string name="app_name">CS3270A5 Preszler</string>
    <string name="practice_making_change">Practice Making Change</string>
    <string name="change_to_make">Change to make</string>
    <string name="change_total_so_far">Change total so far</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="start_over">START OVER</string>
    <string name="new_amount">NEW AMOUNT</string>
    <string name="correct_change_count">Correct change count</string>
    <string name="_0">0</string>
    <string name="zero_correct_count">Zero correct count</string>
    <string name="set_change_max">Set change max</string>
    <string name="thats_too_much_change">That\'s too much change.</string>
    <string name="you_should_try_again">You should try again</string>
    <string name="you_did_it">You did it!</string>
    <string name="you_were_able_to_make_the_correct_change">You were able to make the correct change.</string>
    <string name="OK">OK</string>
    <string name="you_took_too_long">You took too long.</string>
    <string name="maximum_change_amount">Maximum change amount</string>
    <string name="save">SAVE</string>
    <string name="max_amount_cant_be_blank">Max amount cannot be blank</string>
    <string name="x_30">30</string>
</resources>
