<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.npreszler.cs3270a5.FragmentSetMaxChange">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/set_change_max"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/maximum_change_amount"/>
        <EditText
            android:id="@+id/edtChangeMax"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnPositiveChangeMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
